Minor layout tweaks

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
                 padding: 25px;
                 background-color: #eee;
             }
-            h3 {
+            h2 {
                 width: 80%;
-                font-size: 36px;
                 margin: 50px auto;
-                border-bottom: 1px solid #ddd;
-                border-top: 1px solid #ddd;
+                border-bottom: 2px solid #ddd;
+                border-top: 2px solid #ddd;
                 padding: 10px;
             }
             img {
@@ -31,6 +30,7 @@
             }
             p.link-paragraph {
                 margin: 30px auto;
+                padding: 10px 0;
             }
             a.link-button {
                 text-decoration: none;
@@ -55,7 +55,7 @@
         <h1>Beth's AI Tools</h1>
         <p>This repo contains a list of the tools I've made to make it easy to interact with OpenAI's artificial intelligences, such as GPT-3 and DALL-E.</p>
         <p>Since the OpenAI APIs cost money, you will need to provide your own API token in order to use these tools.
-            <h3>How to use</h3>
+            <h2>How to use</h2>
             <p>To get started with these tools:</p>
             <p>
                 <ol>
@@ -71,37 +71,36 @@
         <p><strong>Note:</strong> Your token is stored locally in your web browser. It is never transmitted to me in any capacity.</p>
         <p><strong>All of these tools were built for function, not beauty.</strong></p>
         <h1>GPT-3 Chat</h1>
-        <h3>Description</h3>
+        <h2>Description</h2>
         <p>This tool allows you to send prompts to GPT-3, and it displays the results in the format of a text chat.</p>
-        <h3>About this tool</h3>
+        <h2>About this tool</h2>
         <p>This was the first AI tool I built. After I first tried out GPT-3, I got so addicted to it, that I started to wish I could do prompts from my phone. I decided to build this web interface so I could do it from either my phone or desktop, and I thought the chat format was fun and immersive.</p>
-        <p>Its creation was very rushed and I didn't work on it much after it reached a functional state, but it served as the base on which I built the other two AI tools.</p>
         <p class="link-paragraph"><a class="link-button" target="_blank" href="https://somnolentpumpkin.github.io/gpt3-chat-interface/">Link to the tool</a></p>
         <p class="link-paragraph"><a class="link-button" target="_blank" href="https://github.com/somnolentpumpkin/gpt3-chat-interface">Link to the code</a></p>
-        <h3>Screenshot</h3>
+        <h2>Screenshot</h2>
         <p><img src="https://user-images.githubusercontent.com/16698761/204412506-b1a1d2ef-8bbf-41d6-9e33-e85b037f1c87.png"/></p>
         <br/>
         <h1>GPT-3 Sentiment Analysis</h1>
-        <h3>Description</h3>
+        <h2>Description</h2>
         <p>You can technically do sentiment analysis using GPT-3 Chat, but this tool is specifically designed for it. You paste in some text, and it outputs the detected sentiment.</p>
-        <h3>About this tool</h3>
+        <h2>About this tool</h2>
         <p>This tool was the product of a joke between me and a friend. I jokingly told them they were being negative, and they denied it, so I set this up so I could prove it.</p>
         <p class="link-paragraph"><a class="link-button" target="_blank" href="https://somnolentpumpkin.github.io/gpt3-sentiment-analysis/">Link to the tool</a></p>
         <p class="link-paragraph"><a class="link-button" target="_blank" href="https://github.com/somnolentpumpkin/gpt3-sentiment-analysis">Link to the code</a></p>
-        <h3>Screenshot</h3>
+        <h2>Screenshot</h2>
         <p><img src="https://user-images.githubusercontent.com/16698761/204412954-0a681cd9-1cb3-4c93-b023-2b04c5cb5c13.png"/></p>
         <p><img src="https://user-images.githubusercontent.com/16698761/204413230-b748d8d0-fd85-4052-8e29-997f7eb54bbf.png"/></p>
         <h1>DALL-E Web Interface</h1>
-        <h3>Description</h3>
+        <h2>Description</h2>
         <p>This tool lets you type in a prompt, and DALL-E generates an image based on your prompt. You can choose from three different resolutions, and you can also generate up to 10 images at a time.</p>
         <p>This tool doesn't save your images for you, so make sure you save them by right clicking and selecting <strong>Save As</strong>.</p>
-        <h3>About this tool</h3>
+        <h2>About this tool</h2>
         <p>I've been obsessed with AI-generated images ever since the technology became even remotely accessible. When the DALL-E API left became open to the public, I had to start playing with it right away.</p>
         <p>Like with GPT-3, it was only a matter of time before I HAD to have an easy way to do it from my phone or desktop, and I'm really happy with how this tool turned out.</p>
         <p class="link-paragraph"><a class="link-button" target="_blank" href="https://somnolentpumpkin.github.io/dalle-web-interface/">Link to the tool</a></p>
         <p class="link-paragraph"><a class="link-button" target="_blank" href="https://github.com/somnolentpumpkin/dalle-web-interface">Link to the code</a></p>
         <br/>
-        <h3>Screenshot</h3>
+        <h2>Screenshot</h2>
         <p><img src="https://user-images.githubusercontent.com/16698761/204413794-24e9a52a-73c3-4434-93bb-ce4c70514f92.png"/></p>
     </body>
 </html>
