--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
                 background-color: #eee;
             }
             h2 {
-                width: 80%;
-                margin: 50px auto;
                 border-bottom: 2px solid #ddd;
-                border-top: 2px solid #ddd;
                 padding: 10px;
+                font-size: 38px;
             }
             img {
                 max-width: 100%;
@@ -53,6 +51,7 @@
     </head>
     <body>
         <h1>Beth's AI Tools</h1>
+        <h2>About</h2>
         <p>This repo contains a list of the tools I've made to make it easy to interact with OpenAI's artificial intelligences, such as GPT-3 and DALL-E.</p>
         <p>Since the OpenAI APIs cost money, you will need to provide your own API token in order to use these tools.
             <h2>How to use</h2>
@@ -78,7 +77,7 @@
         <p class="link-paragraph"><a class="link-button" target="_blank" href="https://somnolentpumpkin.github.io/gpt3-chat-interface/">Link to the tool</a></p>
         <p class="link-paragraph"><a class="link-button" target="_blank" href="https://github.com/somnolentpumpkin/gpt3-chat-interface">Link to the code</a></p>
         <h2>Screenshot</h2>
-        <p><img src="https://user-images.githubusercontent.com/16698761/204412506-b1a1d2ef-8bbf-41d6-9e33-e85b037f1c87.png"/></p>
+        <p><img src="https://user-images.githubusercontent.com/16698761/204671538-f7160e89-732d-4015-a921-cd052aea11b1.png"/></p>
         <br/>
         <h1>GPT-3 Sentiment Analysis</h1>
         <h2>Description</h2>
