--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <h1>GPT-3 Chat</h1>
         <h2>Description</h2>
         <p>This tool allows you to send prompts to GPT-3, and it displays the results in the format of a text chat.</p>
+    <p><strong>Note:</strong> This is NOT the same thing as <a target="_blank" href="https://openai.com/blog/chatgpt/">ChatGPT</a>. This is just a chat-styled interface for interacting with regular GPT-3.</p>
         <h2>About this tool</h2>
         <p>This was the first AI tool I built. After I first tried out GPT-3, I got so addicted to it, that I started to wish I could do prompts from my phone. I decided to build this web interface so I could do it from either my phone or desktop, and I thought the chat format was fun and immersive.</p>
         <p class="link-paragraph"><a class="link-button" target="_blank" href="https://somnolentpumpkin.github.io/gpt3-chat-interface/">Link to the tool</a></p>
